--- a/.github/workflows/github-packages-publish.yml
+++ b/.github/workflows/github-packages-publish.yml
@@ -1,4 +1,4 @@
-name: Build & Push to GitHub Packages
+name: Docker
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -6,9 +6,14 @@ name: Build & Push to GitHub Packages
 # documentation.
 
 on:
+  schedule:
+    - cron: '45 8 * * *'
   push:
+    branches: [ "main" ]
+    # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
+  pull_request:
+    branches: [ "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -36,9 +41,9 @@ jobs:
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@d6a3abf1bdea83574e28d40543793018b6035605
+        uses: sigstore/cosign-installer@7e0881f8fe90b25e305bbf0309761e9314607e25
         with:
-          cosign-release: 'v1.7.1'
+          cosign-release: 'v1.9.0'
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
@@ -85,5 +90,4 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
-        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push.outputs.digest }}
-        
+        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
